--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
+    "i18next": "^23.15.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
